--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
     <div id="tooltip"></div>
 
-    <div id="mapButtons">
+    <div class="mapButtons">
         <button type="button" id ="mapBack">Change Map Background</button> 
     </div>
     <div id="colorButtons">
-        <button type="button" id="callB">Color by Call Type</button>
-        <button type="button" id="procT">Color by Process Time</button>
-        <button type="button" id ="callD">Color by Call Date</button>
-        <button type="button" id ="pubA">Color by Public Agency</button>
+        <button type="button" class = "color" id="callT">Color by Call Type</button>
+        <button type="button" class = "color" id="procT">Color by Process Time</button>
+        <button type="button" class = "color" id ="callD">Color by Call Date</button>
+        <button type="button" class = "color" id ="pubA">Color by Public Agency</button>
     </div>
 
 
