working buttons for switching map view

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
 
     <div id="tooltip"></div>
 
-    <div class="mapButtons">
-        <button type="button" id ="mapBack">Change Map Background</button> 
+    <div id="mapButtons">
+        <!-- we will want to change the map button names to something more useful-->
+        <button type="button" class = "map" id ="esri">Map Esri</button> 
+        <button type="button" class = "map" id ="topo">Map Topo</button> 
+        <button type="button" class = "map" id ="st">Map St</button> 
     </div>
     <div id="colorButtons">
         <button type="button" class = "color" id="callT">Color by Call Type</button>
