added count for missing data

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <div id="tooltip"></div>
 
+    <p id = "count"></p>
+
     <div id="mapButtons">
         <!-- we will want to change the map button names to something more useful-->
         <button type="button" class = "map" id ="esri">Map Esri</button> 
