--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <div id="my-map"></div>
+
+    <svg id="barChart1"></svg>
     
     <script src="js/d3.v6.min.js"></script>
     <script src="js/leaflet.js"></script>
-
-
-    <script src="js/main.js"></script>
     <script src="js/leafletMap.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/barchart.js"></script>
 
     <div id="tooltip"></div>
 
