--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 <body>
     <div id="my-map"></div>
 
-    <svg id="barChart1"></svg>
+    <svg id="daybar"></svg>
+    <svg id="servicebar"></svg>
+    <svg id="zipbar"></svg>
+    <svg id="linechart"></svg>
     
     <script src="js/d3.v6.min.js"></script>
     <script src="js/leaflet.js"></script>
     <script src="js/leafletMap.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/barchart.js"></script>
+    <script src="js/barchart2.js"></script>
+    <script src="js/linechart.js"></script>
 
     <div id="tooltip"></div>
 
