Scatter intro. Is broke plz fix

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <svg id="servicebar"></svg>
     <svg id="zipbar"></svg>
     <svg id="linechart"></svg>
+    <svg id="scatterplot"></svg>
     
     <script src="js/d3.v6.min.js"></script>
     <script src="js/leaflet.js"></script>
@@ -20,6 +21,7 @@
     <script src="js/main.js"></script>
     <script src="js/barchart2.js"></script>
     <script src="js/linechart.js"></script>
+    <script src="js/scatterplot.js"></script>
 
     <div id="tooltip"></div>
 
