--- a/index.html
+++ b/index.html
@@ -13,14 +13,31 @@
         <!-- <p>Sourced from NASA Exoplanet Archive:  <a href="https://exoplanetarchive.ipac.caltech.edu" target="_blank">https://exoplanetarchive.ipac.caltech.edu</a>/</p> -->
       </div>
 
-
+      <!--  The Map -->
     <div style="margin: 20px; justify-content: center; align-items: center; display: flex;">
         <div id="my-map"></div>
     </div>
 
+    <div class="section" style="margin: 20px; justify-content: center; align-items: center; display: flex; flex-direction: column;">
 
+        <div id="mapButtons" class="buttons" style="margin-bottom: 10px;">
+            <!-- we will want to change the map button names to something more useful-->
+            <button type="button" class = "map" id ="esri">Map Esri</button> 
+            <button type="button" class = "map" id ="topo">Map Topo</button> 
+            <button type="button" class = "map" id ="st">Map St</button> 
+        </div>
+
+        <div id="colorButtons"  style="margin-bottom: px;">
+            <button type="button" class = "color" id="callT">Color by Call Type</button>
+            <button type="button" class = "color" id="procT">Color by Process Time</button>
+            <button type="button" class = "color" id ="callD">Color by Call Date</button>
+            <button type="button" class = "color" id ="pubA">Color by Public Agency</button>
+        </div>
+        <p id = "count"></p>
+    </div>
     
-    
+
+
 
     <div style="display: flex; flex-direction: column;"> 
         <div class="section">
@@ -97,21 +114,6 @@
     <script src="js/main.js"></script>
 
     <div id="tooltip"></div>
-
-    <p id = "count"></p>
-
-    <div id="mapButtons">
-        <!-- we will want to change the map button names to something more useful-->
-        <button type="button" class = "map" id ="esri">Map Esri</button> 
-        <button type="button" class = "map" id ="topo">Map Topo</button> 
-        <button type="button" class = "map" id ="st">Map St</button> 
-    </div>
-    <div id="colorButtons">
-        <button type="button" class = "color" id="callT">Color by Call Type</button>
-        <button type="button" class = "color" id="procT">Color by Process Time</button>
-        <button type="button" class = "color" id ="callD">Color by Call Date</button>
-        <button type="button" class = "color" id ="pubA">Color by Public Agency</button>
-    </div>
 
 
 </body>
