--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Interactive map with Leaflet</title>
+    <title>Cincinnati Non-Emergency Call Data</title>
     <link rel="icon" href="data:;base64,iVBORwOKGO=" />
     <link rel="stylesheet" href="css/leaflet.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="header">
-        <h1 style="background-color: #b7b7b7; font-size: 30px">Oh Boy 3PM</h1>
+        <h1 style="background-color: #b7b7b7; font-size: 30px">Cincinnati Non-Emergency Call Data</h1>
         <p>By Josh Zack, Rachel Lindquist, and Nishidha Koneru</p>
         <!-- <p>Sourced from NASA Exoplanet Archive:  <a href="https://exoplanetarchive.ipac.caltech.edu" target="_blank">https://exoplanetarchive.ipac.caltech.edu</a>/</p> -->
       </div>
