button title changes

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
         <div id="mapButtons" class="buttons" style="margin-bottom: 10px;">
             <!-- we will want to change the map button names to something more useful-->
-            <button type="button" class = "map" id ="esri">Map Esri</button> 
-            <button type="button" class = "map" id ="topo">Map Topo</button> 
-            <button type="button" class = "map" id ="st">Map St</button> 
+            <button type="button" class = "map" id ="esri">Satellite View </button> 
+            <button type="button" class = "map" id ="topo">Topography View</button> 
+            <button type="button" class = "map" id ="st">Street View</button> 
         </div>
 
         <div id="colorButtons"  style="margin-bottom: px;">
