added some brushing stuff

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     <script src="js/linechart.js"></script>
     <script src="js/scatterplot.js"></script>
     <script src="js/main.js"></script>
+    <script src="ohboy2pm.js"></script>
 
     <div id="tooltip"></div>
 
