Added legend under scatterplot

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         Calls by Day of the Week
                     </h1>
                     <!-- <a href="http://en.wikipedia.org/wiki/Stellar_classification">Wiki on Stellar Classification</a> -->
-                    <p>Showcases the number of calls for each day of the Week</p>
+                    <p>Showcases the number of calls for each day of the week</p>
                 </div>
                 <svg id="daybar"></svg>
             </div>
@@ -70,10 +70,10 @@
             <div class="graph">
                 <div class="topbar">
                     <h1>
-                        Calls by Zipcode
+                        Calls by ZIP Code
                     </h1>
                     <!-- <a href="http://en.wikipedia.org/wiki/Stellar_classification">Wiki on Stellar Classification</a> -->
-                    <p>Showcases the number of calls for the top 13 zipcodes</p>
+                    <p>Showcases the number of calls for the top 13 ZIP codes</p>
                 </div>
                 
                 <svg id="zipbar"></svg>
@@ -85,7 +85,7 @@
         <div class="graphlong">
             <div class="topbar">
                 <h1>
-                    Total Call by Date
+                    Total Calls by Date
                 </h1>
                 <!-- <a href="http://en.wikipedia.org/wiki/Stellar_classification">Wiki on Stellar Classification</a> -->
                 <p>Showcases the number of requested calls each date</p>
@@ -99,11 +99,11 @@
                     Process Time vs Requested Date
                 </h1>
                 <!-- <a href="http://en.wikipedia.org/wiki/Stellar_classification">Wiki on Stellar Classification</a> -->
-                <p>Showcases the process time vs the requested Date</p>
+                <p>Showcases the process time vs the requested date</p>
             </div>
             
             <svg id="scatterplot"></svg>
-            <!-- <svg id="legend2"></svg> -->
+            <svg id="legend2"></svg>
         </div>
 
     </div>
